compiler/toc-analysis/src/typeck/snapshots/toc_analysis__typeck__test__typeck_for_implied_not_ty.snap
---
source: compiler/toc_analysis/src/typeck/test.rs
expression: "module b end b /**/ for : b end for"
---
"b"@(FileId(1), 7..8) [Module(No)]: <error>
"<root>"@(dummy) [Module(No)]: <error>

error in file FileId(1) at 26..27: cannot use `b` as a `for` bound
| error in file FileId(1) for 26..27: `b` is a reference to a module, not a type
| note in file FileId(1) for 7..8: `b` declared here
