compiler/toc-analysis/src/typeck/snapshots/toc_analysis__typeck__test__typeck_for_infer_counter_ty.snap
---
source: compiler/toc-analysis/src/typeck/test.rs
expression: "for a : 1 .. 10\n    var q : int := a\nend for\n"
---
"a"@"src/main.t:4..5" [ConstVar(Const, No)]: int
"q"@"src/main.t:24..25" [ConstVar(Var, No)]: int
"<root>"@"<unknown>:0..0" [Module(No)]: <error>
