compiler/toc-analysis/src/typeck/snapshots/toc_analysis__typeck__test__typeck_for_wrong_types_bounds_concrete_integer.snap
---
source: compiler/toc-analysis/src/typeck/test.rs
expression: "var r : real for : r .. 1 end for"
---
"r"@(FileId(1), 4..5) [ConstVar(Var, No)]: real
"<root>"@(dummy) [Module(No)]: <error>

error at (FileId(1), 19..25): mismatched types
| note for (FileId(1), 24..25): this is of type `{integer}`
| note for (FileId(1), 19..20): this is of type `real`
| error for (FileId(1), 19..25): expected index types
| info: range bounds types must both be index types (an integer, `boolean`, `char`, enumerated type, or a range)
