compiler/toc-analysis/src/typeck/snapshots/toc_analysis__typeck__test__typeck_for_wrong_types_bounds_integer_concrete.snap
---
source: compiler/toc-analysis/src/typeck/test.rs
expression: "var r : real for : 1 .. r end for"
---
"r"@(FileId(1), 4..5) [ConstVar(Var, No)]: real
"<root>"@(dummy) [Module(No)]: <error>

error at (FileId(1), 19..25): mismatched types
| note for (FileId(1), 24..25): this is of type `real`
| note for (FileId(1), 19..20): this is of type `{integer}`
| error for (FileId(1), 19..25): expected index types
| info: range bounds types must both be index types (an integer, `boolean`, `char`, enumerated type, or a range)
