compiler/toc-analysis/src/typeck/snapshots/toc_analysis__typeck__test__typeck_for_wrong_value_bounds.snap
---
source: compiler/toc-analysis/src/typeck/test.rs
expression: "type k : string\nfor : k .. k end for\nfor : 1 .. k end for\nfor : k .. 1 end for\n"
---
"k"@(FileId(1), 5..6) [Type]: alias[DefId(PackageId(0), LocalDefId(0))] of string
"<root>"@(dummy) [Module(No)]: <error>

error at (FileId(1), 22..23): cannot use `k` as an expression
| error for (FileId(1), 22..23): `k` is a reference to a type, not a variable
| note for (FileId(1), 5..6): `k` declared here
error at (FileId(1), 27..28): cannot use `k` as an expression
| error for (FileId(1), 27..28): `k` is a reference to a type, not a variable
| note for (FileId(1), 5..6): `k` declared here
error at (FileId(1), 48..49): cannot use `k` as an expression
| error for (FileId(1), 48..49): `k` is a reference to a type, not a variable
| note for (FileId(1), 5..6): `k` declared here
error at (FileId(1), 64..65): cannot use `k` as an expression
| error for (FileId(1), 64..65): `k` is a reference to a type, not a variable
| note for (FileId(1), 5..6): `k` declared here
